--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Peter Chang</title>
+    <link rel="stylesheet" href="/styles.css"> 
 </head>
 <body>
-    First FES Portfolio Project!
+    <section id="about-me">
+        <nav>
+            <div class="personal__logo">Peter Chang</div>
+            <ul class="nav__link--list">
+                <li>
+                    <a href="" class="
+                        nav__link--anchor
+                        link__hover-effect
+                        link__hover-effect--black
+                    ">Languages</a>
+                </li>
+                <li>
+                    <a href="" class="
+                        nav__link--anchor
+                        link__hover-effect
+                        link__hover-effect--black
+                    ">Project</a>
+                </li>
+                <li>
+                    <a href="" class="
+                        nav__link--anchor
+                        nav__link--anchor-primary
+                    ">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="flex flex-1">
+            <div class="about-me__info row">
+                <div class="about-me__info--container">
+                    <figure class="about-me__picture--mask">
+                        <img src="assets/1689663346797.jpeg" class="about-me__picture" alt="Peter Chang!">
+                    </figure>
+                    <h1 class="about-me__info--title">
+                        Hello nice to meet you!  I am <span class="text--purple">Peter Chang🤜🤛</span>
+                    </h1>
+                    <p class="about-me__info--para">
+                        I am a <strong class="text--purple">frontend web developer</strong> with a strong background in graphic design and brand identity. I am passionate about building responsive, high-performance web applications that deliver seamless user experiences and elevate modern web design.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
