--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter Chang</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/ad6061a78a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -15,26 +15,27 @@
             <div class="personal__logo"><img src="assets/myLogo.png" alt="Peter Chang"></div>
             <ul class="nav__link--list">
                 <li class="nav__link">
-                    <a href="#languages" class="
+                    <!--<a href="#languages" class="
                         nav__link--anchor
                         link__hover-effect
                         link__hover-effect--black
-                    ">Languages</a>
+                    ">Languages</a> -->
+                    <a href="#languages" class="nav__link--anchor link__hover-effect link__hover-effect--black">Languages</a>
                 </li>
-                <li>
-                    <a href="#" class="
+                <li class="nav__link">
+                    <a href="#projects" class="
                         nav__link--anchor
                         link__hover-effect
                         link__hover-effect--black
-                    ">Project</a>
+                    ">Projects</a>
                 </li>
-                <li>
-                    <a href="#" class="
+                <li class="nav__link">
+                    <a href="mailto:email@email.com" class="
                         nav__link--anchor
                         nav__link--anchor-primary
                     ">Contact</a>
                 </li>
-            </ul>
+      </ul>
         </nav>
         <div class="flex flex-1">
             <div class="about-me__info row">
@@ -43,7 +44,7 @@
                         <img src="assets/1689663346797.jpeg" class="about-me__picture" alt="Peter Chang!">
                     </figure>
                     <h1 class="about-me__info--title">
-                        Hello nice to meet you!<br>I am <span class="text--purple">Peter Chang🤜🤛</span>
+                        Hello nice to meet you!<br>I am <span class="text--purple">Petey Pablo Bando Chang🤜🤛</span>
                     </h1>
                     <p class="about-me__info--para">
                         I am a <strong class="text--blue">frontend web developer</strong> with a strong background in
