--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
             <div class="personal__logo"><img src="assets/myLogo.png" alt="Peter Chang"></div>
             <ul class="nav__link--list">
                 <li class="nav__link">
-                    <!--<a href="#languages" class="
+                    <a href="#languages" class="
                         nav__link--anchor
                         link__hover-effect
                         link__hover-effect--black
-                    ">Languages</a> -->
-                    <a href="#languages" class="nav__link--anchor link__hover-effect link__hover-effect--black">Languages</a>
+                    ">Languages</a>
                 </li>
                 <li class="nav__link">
                     <a href="#projects" class="
@@ -35,7 +34,7 @@
                         nav__link--anchor-primary
                     ">Contact</a>
                 </li>
-      </ul>
+          </ul>
         </nav>
         <div class="flex flex-1">
             <div class="about-me__info row">
