--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <img src="assets/1689663346797.jpeg" class="about-me__picture" alt="Peter Chang!">
                     </figure>
                     <h1 class="about-me__info--title">
-                        Hello nice to meet you!<br>I am <span class="text--purple">Petey Pablo Bando Chang🤜🤛</span>
+                        Hello nice to meet you!<br>I am <span class="text--purple">Peter Chang<span class="leftFist">🤜</span>&nbsp;<span class="rightFist">🤛</span>
                     </h1>
                     <p class="about-me__info--para">
                         I am a <strong class="text--blue">frontend web developer</strong> with a strong background in
@@ -54,11 +54,11 @@
                         <a href="" class="about-me__link"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="" class="about-me__link"><i class="fa-brands fa-github"></i></a>
                         <a href="" class="about-me__link"><i class="fa-solid fa-at"></i></a>
-                        <a href="" class="about-me__link"><i class="fa-sharp fa-solid fa-file-pdf"></i></a>
+                        <a href="assets/Peter Chang - Resume P1 - FINAL MASTER.pdf" target="_blank" class="about-me__link"><i class="fa-sharp fa-solid fa-file-pdf"></i></a>
                     </div>
                 </div>
                 <figure class="about-me__img--container">
-                    <img src="assets/undraw_programming_j1zw.svg" class="about-me__img" alt="Peter Chang web designer">
+                    <img src="assets/undraw_programming_j1zw.png" class="about-me__img" alt="Peter Chang web designer">
                 </figure>
             </div>
         </div>
@@ -80,9 +80,9 @@
                             <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt=""
                                 class="language__img">
                         </figure>
-                        <span class="language__name">HTML</span>
+                        <span class="language__name">CSS</span>
                     </div>
-                    <div class="language">
+                    <!-- <div class="language">
                         <figure class="language__img--wrapper">
                             <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt=""
                                 class="language__img">
@@ -125,7 +125,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> --> 
         </div>
     </section>
     <section id="projects">
@@ -228,7 +228,7 @@
         <div class="row footer__row">
             <a href="#" class="footer__anchor">
                 <figure class="footer__logo">
-                    <img src="assets/myLogo.png" class="footer__logo--img" alt="Peter Chang web designer">
+                    <img src="assets/myLogoforFooter.png" class="footer__logo--img" alt="Peter Chang web designer">
                 </figure>
                 <span class="footer__logo--popper">
                     Top
